# sdrpp-spots

./: CMakeLists.txt  README.md  spots.sh  spots_hamqth.sh  spots_pota.sh
src/: main.cpp  main.h
src/sources/: hamqth.h  http_poller.h  pota.h  wwff.h
